1997-10-03  Daniel.Weaver

	* charset.c, output.c, edit.c, crum.c: ncurses-4.1-971011

1997-10-02  Daniel.Weaver

	* menu.c: ncurses-4.1-971011

1997-09-29  Daniel.Weaver

	* color.c, ansi.c: ncurses-4.1-971011

1997-09-28  Daniel.Weaver

	* tic.h: ncurses-4.1-971011

1997-09-22  Daniel.Weaver

	* scan.c: ncurses-4.1-971011
